fix dark mode

--- a/docs/src/css/footer.css
+++ b/docs/src/css/footer.css
@@ -9,6 +9,12 @@
 
   }
 
+[data-theme="dark"] .custom-footer {
+  background-color: #000;
+  color: #fff;
+}
+
+
   .footer-content {
     display: flex;
     flex-direction: column;
