--- a/docs/src/css/homepageHeader.css
+++ b/docs/src/css/homepageHeader.css
@@ -2,8 +2,6 @@
 
 .homepage-header {
   height: 800px;
-  color: #000;
-  background-color: #F1EAE0;
 }
 
 .header-content {
